==History

[jerbil-0.99.10 25-Jul-2012]

  jerbil/jerbil_service/client requires server instead of servers

[jerbil-0.99.09 25-Jul-2012]

  Fix typo when adding services from remote server

[jerbil-0.99.08 25-Jul-2012]

  Fix error in thor services verify

[jerbil-0.99.07 24-Jul-2012]

  another release candidate with tweaks to sbin scripts.

[jerbil-0.99.06 23-Jul-2012]

  minor tweaks to config files for installation

[jerbil-0.99.05 23-Jul-2012]

  fixed Etc.getpwnam.name

[jerbil-0.99.04 23-Jul-2012]

  fixed Jerbil::Config to inherit JerbilService::Config

[jerbil-0.99.03 23-Jul-2012]

  Release candidate for testing

[jerbil-0.99.02 12-June-2012]

  Fix mistaken call to get_key, now gone

[jerbil-0.99.01 08-June-2012]

  First pre-release of Jerbil 1.0.0, offering flexible server configuration and a single
  script for controlling services.
  
  * reconfigured options to use Jeckyl::Service and to add net address and mask details
  * renamed Jerbil::ServerRecord to Jerbil::Servers to reflect the role of the class

[jerbil-0.2.21 19-May-2012]

  Added Aurelius to the default files and rename jers to jerbil

[jerbil-0.2.20 28-Apr-2012]

  Annotate the client calls to try to understand the NoMethod errors raised

[jerbil-0.2.19 22-Mar-2012]

  Fix a bug where 1.9 was failing cos instance_methods returns symbols instead of
  strings.

jerbil-0.2.18 23-Dec-2011

Some refactoring and ensuring exception backtraces have newlines and not \n between
them!

jerbil-0.2.17 19-Dec-2011

Attempt to fix error when stopping services: cannot read symbol as string. Assume that
it is caused by :jerbil_config option. It Worked!

jerbil-0.2.16 19-Dec-2011

Restart logging after daemon is called

jerbil-0.2.15 19-Dec-2011

Change supervisor to catch StandardError and let SystemExit fall through untouched.
Add opts to log output from daemonize

jerbil-0.2.14 19-Dec-2011

improvements to supervisor class to add daemon log and catch errors more often

jerbil-0.2.12 27-Nov-2011
