@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
 # 25-Jul-2012
-#     jerbil/jerbil_service/client requires server instead of servers
+#     Annotated to help debug key issues
 
 module Jerbil
-  # version set to 0.99.10
-  Version = '0.99.10'
+  # version set to 0.99.11
+  Version = '0.99.11'
   # date set to 25-Jul-2012
   Version_Date = '25-Jul-2012'
-  #ident string set to: jerbil-0.99.10 25-Jul-2012
-  Ident = 'jerbil-0.99.10 25-Jul-2012'
+  #ident string set to: jerbil-0.99.11 25-Jul-2012
+  Ident = 'jerbil-0.99.11 25-Jul-2012'
 end
